--- a/nagios/server/files/cgi.cfg
+++ b/nagios/server/files/cgi.cfg
@@ -1,3 +1,5 @@
+{%- set nagios = pillar.get('nagios', {}) -%}
+{%- set config = nagios.get('cgi_cfg', {}) -%}
 #################################################################
 #
 # CGI.CFG - Sample CGI Configuration File for Nagios 3.5.1
@@ -12,7 +14,9 @@
 # The CGIs will read the main and host config files for any other
 # data they might need.
 
-main_config_file=/etc/nagios/nagios.cfg
+{% set main_config_file = config.get('main_config_file', '/etc/nagios/nagios.cfg') -%}
+main_config_file={{ main_config_file }}
+#main_config_file=/etc/nagios/nagios.cfg
 
 
 
@@ -21,7 +25,9 @@ main_config_file=/etc/nagios/nagios.cfg
 # value is used to locate the logo images needed by the statusmap
 # and statuswrl CGIs.
 
-physical_html_path=/usr/share/nagios/html
+{% set physical_html_path = config.get('physical_html_path', '/usr/share/nagios/html') -%}
+physical_html_path={{ physical_html_path }}
+#physical_html_path=/usr/share/nagios/html
 
 
 
@@ -33,7 +39,9 @@ physical_html_path=/usr/share/nagios/html
 # http://www.myhost.com/nagios, this value should be '/nagios'
 # (without the quotes).
 
-url_html_path=/nagios
+{% set url_html_path = config.get('url_html_path', '/nagios') -%}
+url_html_path={{ url_html_path }}
+#url_html_path=/nagios
 
 
 
@@ -43,7 +51,9 @@ url_html_path=/nagios
 # Values: 0 = disables context-sensitive help
 #         1 = enables context-sensitive help
 
-show_context_help=0
+{% set show_context_help = config.get('show_context_help', '0') -%}
+show_context_help={{ show_context_help }}
+#show_context_help=0
 
 
 
@@ -53,7 +63,9 @@ show_context_help=0
 # Values: 0 = leave hosts/services that have not been check yet in their original state
 #         1 = mark hosts/services that have not been checked yet as PENDING
 
-use_pending_states=1
+{% set use_pending_states = config.get('use_pending_states', '1') -%}
+use_pending_states={{ use_pending_states }}
+#use_pending_states=1
 
 
 
@@ -75,7 +87,9 @@ use_pending_states=1
 # authentication (bad idea), while any other value will make them
 # use the authentication functions (the default).
 
-use_authentication=1
+{% set use_authentication = config.get('use_authentication', '1') -%}
+use_authentication={{ use_authentication }}
+#use_authentication=1
 
 
 
@@ -85,7 +99,9 @@ use_authentication=1
 # authentication in the CGIs.  This is an advanced option and should
 # not be enabled unless you know what you're doing.
 
-use_ssl_authentication=0
+{% set use_ssl_authentication = config.get('use_ssl_authentication', '0') -%}
+use_ssl_authentication={{ use_ssl_authentication }}
+#use_ssl_authentication=0
 
 
 
@@ -116,7 +132,9 @@ use_ssl_authentication=0
 # not use authorization.  You may use an asterisk (*) to
 # authorize any user who has authenticated to the web server.
 
-authorized_for_system_information=nagiosadmin
+{% set authorized_for_system_information = config.get('authorized_for_system_information', 'nagiosadmin') -%}
+authorized_for_system_information={{ authorized_for_system_information }}
+#authorized_for_system_information=nagiosadmin
 
 
 
@@ -128,7 +146,9 @@ authorized_for_system_information=nagiosadmin
 # an asterisk (*) to authorize any user who has authenticated
 # to the web server.
 
-authorized_for_configuration_information=nagiosadmin
+{% set authorized_for_configuration_information = config.get('authorized_for_configuration_information', 'nagiosadmin') -%}
+authorized_for_configuration_information={{ authorized_for_configuration_information }}
+#authorized_for_configuration_information=nagiosadmin
 
 
 
@@ -141,7 +161,9 @@ authorized_for_configuration_information=nagiosadmin
 # You may use an asterisk (*) to authorize any user who has
 # authenticated to the web server.
 
-authorized_for_system_commands=nagiosadmin
+{% set authorized_for_system_commands = config.get('authorized_for_system_commands', 'nagiosadmin') -%}
+authorized_for_system_commands={{ authorized_for_system_commands }}
+#authorized_for_system_commands=nagiosadmin
 
 
 
@@ -154,8 +176,12 @@ authorized_for_system_commands=nagiosadmin
 # to authorize any user who has authenticated to the web server.
 
 
-authorized_for_all_services=nagiosadmin
-authorized_for_all_hosts=nagiosadmin
+{% set authorized_for_all_services = config.get('authorized_for_all_services', 'nagiosadmin') -%}
+authorized_for_all_services={{ authorized_for_all_services }}
+#authorized_for_all_services=nagiosadmin
+{% set authorized_for_all_hosts = config.get('authorized_for_all_hosts', 'nagiosadmin') -%}
+authorized_for_all_hosts={{ authorized_for_all_hosts }}
+#authorized_for_all_hosts=nagiosadmin
 
 
 
@@ -168,8 +194,12 @@ authorized_for_all_hosts=nagiosadmin
 # authorization).  You may use an asterisk (*) to authorize any
 # user who has authenticated to the web server.
 
-authorized_for_all_service_commands=nagiosadmin
-authorized_for_all_host_commands=nagiosadmin
+{% set authorized_for_all_service_commands = config.get('authorized_for_all_service_commands', 'nagiosadmin') -%}
+authorized_for_all_service_commands={{ authorized_for_all_service_commands }}
+#authorized_for_all_service_commands=nagiosadmin
+{% set authorized_for_all_host_commands = config.get('authorized_for_all_host_commands', 'nagiosadmin') -%}
+authorized_for_all_host_commands={{ authorized_for_all_host_commands }}
+#authorized_for_all_host_commands=nagiosadmin
 
 
 
@@ -180,7 +210,10 @@ authorized_for_all_host_commands=nagiosadmin
 # to read-only users.
 
 #authorized_for_read_only=user1,user2
-
+{% set authorized_for_read_only = config.get('authorized_for_read_only', '') -%}
+{% if authorized_for_read_only != '') -%}
+authorized_for_read_only={{ authorized_for_read_only }}
+{% endif %}
 
 
 
@@ -196,7 +229,10 @@ authorized_for_all_host_commands=nagiosadmin
 # generates the image.
 
 #statusmap_background_image=smbackground.gd2
-
+{% set statusmap_background_image = config.get('statusmap_background_image', '') -%}
+{% if statusmap_background_image != '') -%}
+statusmap_background_image={{ statusmap_background_image }}
+{% endif %}
 
 
 
@@ -207,8 +243,20 @@ authorized_for_all_host_commands=nagiosadmin
 # Defaults to white: (R,G,B) = (255,255,255).
 
 #color_transparency_index_r=255
+{% set color_transparency_r = config.get('color_transparency_r', '') -%}
+{% if color_transparency_r != '') -%}
+color_transparency_r={{ color_transparency_r }}
+{% endif %}
 #color_transparency_index_g=255
+{% set color_transparency_g = config.get('color_transparency_g', '') -%}
+{% if color_transparency_g != '') -%}
+color_transparency_g={{ color_transparency_g }}
+{% endif %}
 #color_transparency_index_b=255
+{% set color_transparency_b = config.get('color_transparency_b', '') -%}
+{% if color_transparency_b != '') -%}
+color_transparency_b={{ color_transparency_b }}
+{% endif %}
 
 
 
@@ -225,7 +273,9 @@ authorized_for_all_host_commands=nagiosadmin
 #       4 = Circular
 #       5 = Circular (Marked Up)
 
-default_statusmap_layout=5
+{% set default_statusmap_layout = config.get('default_statusmap_layout', '5') -%}
+default_statusmap_layout={{ default_statusmap_layout }}
+#default_statusmap_layout=5
 
 
 
@@ -239,7 +289,9 @@ default_statusmap_layout=5
 #       3 = Balanced tree
 #       4 = Circular
 
-default_statuswrl_layout=4
+{% set default_statuswrl_layout = config.get('default_statuswrl_layout', '4') -%}
+default_statuswrl_layout={{ default_statuswrl_layout }}
+#default_statuswrl_layout=4
 
 
 
@@ -249,7 +301,10 @@ default_statuswrl_layout=4
 # resides in the HTML path (i.e. /usr/local/nagios/share).
 
 #statuswrl_include=myworld.wrl
-
+{% set statuswrl_include = config.get('statuswrl_include', '') -%}
+{% if statuswrl_include != '') -%}
+statuswrl_include={{ statuswrl_include }}
+{% endif %}
 
 
 # PING SYNTAX
@@ -264,7 +319,9 @@ default_statuswrl_layout=4
 # OS and distribution, so you may have to tweak this to
 # work on your system.
 
-ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
+{% set ping_syntax = config.get('ping_syntax', '/bin/ping -n -U -c 5 $HOSTADDRESS$') -%}
+ping_syntax={{ ping_syntax }}
+#ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
 
 
 
@@ -272,7 +329,9 @@ ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
 # This option allows you to specify the refresh rate in seconds
 # of various CGIs (status, statusmap, extinfo, and outages).  
 
-refresh_rate=90
+{% set refresh_rate = config.get('refresh_rate', '90') -%}
+refresh_rate={{ refresh_rate }}
+#refresh_rate=90
 
 # DEFAULT PAGE LIMIT
 # This option allows you to specify the default number of results 
@@ -280,7 +339,9 @@ refresh_rate=90
 # within the UI after the initial page load. Setting this to 0
 # will show all results.  
 
-result_limit=100
+{% set result_limit = config.get('result_limit', '100') -%}
+result_limit={{ result_limit }}
+#result_limit=100
 
 
 # ESCAPE HTML TAGS
@@ -288,7 +349,9 @@ result_limit=100
 # status output is escaped in the web interface.  If enabled,
 # your plugin output will not be able to contain clickable links.
 
-escape_html_tags=1
+{% set escape_html_tags = config.get('escape_html_tags', '1') -%}
+escape_html_tags={{ escape_html_tags }}
+#escape_html_tags=1
 
 
 
@@ -311,11 +374,35 @@ escape_html_tags=1
 # under the HTML path (i.e. /usr/local/nagios/share/media/).
 
 #host_unreachable_sound=hostdown.wav
+{% set host_unreachable_sound = config.get('host_unreachable_sound', '') -%}
+{% if host_unreachable_sound != '') -%}
+host_unreachable_sound={{ host_unreachable_sound }}
+{% endif %}
 #host_down_sound=hostdown.wav
+{% set host_down_sound = config.get('host_down_sound', '') -%}
+{% if host_down_sound != '') -%}
+host_down_sound={{ host_down_sound }}
+{% endif %}
 #service_critical_sound=critical.wav
+{% set service_critical_sound = config.get('service_critical_sound', '') -%}
+{% if service_critical_sound != '') -%}
+service_critical_sound={{ service_critical_sound }}
+{% endif %}
 #service_warning_sound=warning.wav
+{% set service_warning_sound = config.get('service_warning_sound', '') -%}
+{% if service_warning_sound != '') -%}
+service_warning_sound={{ service_warning_sound }}
+{% endif %}
 #service_unknown_sound=warning.wav
+{% set service_unknown_sound = config.get('service_unknown_sound', '') -%}
+{% if service_unknown_sound != '') -%}
+service_unknown_sound={{ service_unknown_sound }}
+{% endif %}
 #normal_sound=noproblem.wav
+{% set normal_sound = config.get('normal_sound', '') -%}
+{% if normal_sound != '') -%}
+normal_sound={{ normal_sound }}
+{% endif %}
 
 
 
@@ -323,8 +410,12 @@ escape_html_tags=1
 # These options determine the target frames in which notes and 
 # action URLs will open.
 
-action_url_target=_blank
-notes_url_target=_blank
+{% set action_url_target = config.get('action_url_target', '_blank') -%}
+action_url_target={{ action_url_target }}
+#action_url_target=_blank
+{% set notes_url_target = config.get('notes_url_target', '_blank') -%}
+notes_url_target={{ notes_url_target }}
+#notes_url_target=_blank
 
 
 
@@ -336,7 +427,9 @@ notes_url_target=_blank
 # Values: 0 = allow editing author names
 #         1 = lock author names (disallow editing)
 
-lock_author_names=1
+{% set lock_author_names = config.get('lock_author_names', '1') -%}
+lock_author_names={{ lock_author_names }}
+#lock_author_names=1
 
 
 
@@ -354,11 +447,17 @@ lock_author_names=1
 #         1 = enable Splunk integration
 
 #enable_splunk_integration=1
-
+{% set enable_splunk_integration = config.get('enable_splunk_integration', '') -%}
+{% if enable_splunk_integration != '') -%}
+enable_splunk_integration={{ enable_splunk_integration }}
+{% endif %}
 
 # This option should be the URL used to access your instance of Splunk
 
 #splunk_url=http://127.0.0.1:8000/
-
+{% set splunk_url = config.get('splunk_url', '') -%}
+{% if splunk_url != '') -%}
+splunk_url={{ splunk_url }}
+{% endif %}
 
 
